poke/testsuite/poke.pkl/unmap-diag-1.pk
/* { dg-do compile } */

unmap atoi; /* { dg-error "cannot be mapped" } */
